--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h2>My Hobies</h2>
             <h4>Inner</h4>
             <figure>
-                <img src="images/myhobiespic1.jpg" alt="My picture" height="200" width="300">
+                <img src="image/inner.jpg" alt="My picture" height="200" width="300">
                 <figcaption style="font-weight: bold;">
                     Playing Online Games
                 </figcaption>
@@ -87,7 +87,7 @@
             </figure>
             <h4>Outside</h4>
             <figure>
-                <img src="images/mytravelpic.jpg" alt="My picture" height="200" width="300">
+                <img src="image/outside.webp" alt="My picture" height="200" width="300">
                 <figcaption style="font-weight: bold;">
                     Travelling
                 </figcaption>
@@ -105,7 +105,7 @@
         <h2>My Favorates</h2>
         <h4>Food</h4>
         <figure>
-        <img src="images/myfavoratefoodpic.jpg" alt="chicken adobo picture" height="250" width="300">
+        <img src="image/food.jpg" alt="chicken adobo picture" height="250" width="300">
         <figcaption style="font-weight: bold;">
             Chicken Adobo
         </figcaption>
@@ -115,7 +115,7 @@
         <h4>Favorate Color</h4>
         <figure>
 
-        <img src="images/myfavoratecolorpic1.jpg" alt="color gray picture" height="250" width="300">
+        <img src="image/Black.png.webp" alt="color gray picture" height="250" width="300">
          <figcaption style="font-weight: bold;">
             white gray color
          </figcaption>
@@ -130,7 +130,7 @@
     <section>
      <h2>My Friends</h2>
      <figure>
-     <img src="images/myfriendspic1.jpg" alt="My high school picture" height="330" width="300">
+     <img src="image/friend.jpg" alt="My high school picture" height="330" width="300">
      <figcaption style="font-weight: bold;">
         My High School Friends
      </figcaption>
@@ -139,7 +139,7 @@
     </figure>
 
     <figure>
-     <img src="images/myfriendspic2.jpg" alt="my friends picture" height="300" width="300">
+     <img src="image/college.jpg" alt="my friends picture" height="300" width="300">
      <figcaption style="font-weight: bold;">
         My college Friends
      </figcaption>
@@ -155,7 +155,7 @@
    </main>
 
    <footer style="text-align: center;">
-    <p>All rigth &copy;Gelo Hinautan</p>
+    <p>All rigth &copy;johnbill danggis</p>
     <a href="#top">Back to Top</a>
    </footer>
 </body>
